[gd_scene load_steps=5 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://neuropolitical rg.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParentVBoX" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
rect_min_size = Vector2( 215, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleHBox" type="HBoxContainer" parent="ParentVBoX"]
margin_right = 215.0
margin_bottom = 20.0

[node name="objective_label" type="Label" parent="ParentVBoX/TitleHBox"]
margin_right = 187.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "Current Objectives"

[node name="add_button" type="Button" parent="ParentVBoX/TitleHBox"]
margin_left = 191.0
margin_right = 211.0
margin_bottom = 20.0
hint_tooltip = "Add another task item"
text = "+"

[node name="QuestListVBox" type="VBoxContainer" parent="ParentVBoX"]
margin_top = 24.0
margin_right = 215.0
margin_bottom = 24.0

[node name="quit_button" type="Button" parent="ParentVBoX"]
margin_top = 28.0
margin_right = 215.0
margin_bottom = 54.0
hint_tooltip = "Closes the program"
custom_fonts/font = SubResource( 2 )
text = "Close RL Quest"
flat = true
[connection signal="pressed" from="ParentVBoX/TitleHBox/add_button" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="ParentVBoX/quit_button" to="." method="_on_quit_pressed"]
